--- a/package.json
+++ b/package.json
@@ -1,42 +1,57 @@
 {
-  "name": "lms-app",
+  "name": "lms-sanity-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.35.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-progress": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@sanity/image-url": "^1.2.0",
-    "@sanity/vision": "^4.15.0",
+    "@clerk/nextjs": "^6.10.5",
+    "@portabletext/react": "^3.2.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
+    "@sanity/client": "^6.27.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/preview-url-secret": "^2.1.4",
+    "@sanity/vision": "^3.72.1",
+    "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.553.0",
-    "next": "16.0.3",
-    "next-sanity": "^11.6.6",
-    "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "sanity": "^4.15.0",
-    "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.4.0"
+    "groq": "^3.72.1",
+    "lucide-react": "^0.474.0",
+    "next": "15.1.6",
+    "next-sanity": "^11.6.7",
+    "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
+    "sanity": "^3.99.0",
+    "stripe": "^17.6.0",
+    "styled-components": "^6.1.14",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^20.17.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
