--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-url-secret": "^2.1.4",
     "@sanity/vision": "^3.72.1",
+    "@sanity/visual-editing": "^4.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "groq": "^3.72.1",
